Implement builder pattern for DichotomyEngine